--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,19 @@
         <title>{{ page.title }}</title>
         <meta name="description" content="Bootstrap 4 training page">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!-- Critical CSS -->
+        <style>
+            {% include critical.css %}
+            /* Important CSS code - without the line below the viewport skips on load */
+            @media (max-width: 37em) {.address span::after {content: '\A';white-space: pre;}}
+        </style>
+  
+        <link rel="preload" href="{{ site.baseurl }}/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"></noscript>
+  
+
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-custom.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
