--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,17 +14,17 @@
             @media (max-width: 37em) {.address span::after {content: '\A';white-space: pre;}}
         </style>
   
-        <link rel="preload" href="{{ site.baseurl }}/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-        <noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"></noscript>
-  
-
-
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-custom.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
-        <!-- Google Fonts -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Quicksand:300,400,700&amp;subset=latin-ext">
+        <link rel="preload" href="{{ site.baseurl }}/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css"></noscript>
+        
+        <!-- A function for loading CSS asynchronously -->
+        <script>
+            {% include loadCSS.js %}
+        </script>
+
     </head>
     <body>
 
